--- a/wc-dev/css/main.scss
+++ b/wc-dev/css/main.scss
@@ -114,6 +114,39 @@ html {
 	font-size: small;
 }
 
+h1 {
+	margin: 0;
+	padding: 0;
+	font-weight: 600;
+	line-height: 1em;
+	font-size: 150%;
+}
+
+h2 {
+	margin: 0;
+	padding: 0;
+	font-weight: 600;
+	line-height: 1em;
+	font-size: 150%;
+}
+
+p {
+	margin: 0;
+	padding: 0;
+	font-weight: 300;
+}
+
+a {
+	color: $brand-col-red;
+	transition: color .3s;
+	-webkit-transition: color .3s;
+	text-decoration: none;	
+}
+	
+a:hover {
+	color: $brand-col-turquoise;
+}
+
 .white-fill {
 	fill: $white;
 }
@@ -262,10 +295,6 @@ body {
 	font-size: 160%;
 }
 
-h1 {
-	font-weight: 700;
-}
-
 li {
 	color: $white;
 	list-style-type: none;
@@ -288,6 +317,31 @@ li {
 	width: 33.333%;
 	float: left;
 	display: inline;
+}
+
+#blog-posts {
+	float: left;
+	width: 100%;
+	background: $brand-col-red;
+	padding: 20px 0 40px 0;
+	
+	a {
+		color: $white;
+	}
+	
+	a:hover {
+		color: $brand-col-turquoise;
+	}
+	
+	.padding {
+		padding: 20px 20px 0;
+	}
+	
+}
+
+.blog-promo-header {
+	margin: 20px 20px 0;
+	color: $brand-col-green;
 }
 
 footer {
@@ -350,6 +404,9 @@ footer {
 	}
 	
 }
+
+
+
 
 
 /* =============================
@@ -497,8 +554,12 @@ footer {
 	    width: 100%;
 	}
 	
+	#blog-posts {
+		padding: 40px 0 60px 0;
+	}
+	
 	footer {
-		margin: 40px 0;
+		margin: 40px 0 40px;
 		
 		.col-3 {
 			padding: 0;
@@ -507,9 +568,6 @@ footer {
 		.copyright {
 			margin-top: 40px;
 		}
-		
-		
-
 
 	}
 }	
