--- a/wc-dev/css/main.scss
+++ b/wc-dev/css/main.scss
@@ -115,23 +115,68 @@ html {
 }
 
 h1 {
-	margin: 0;
+	margin: 0 0 80px;
 	padding: 0;
 	font-weight: 600;
 	line-height: 1em;
 	font-size: 150%;
+	float: left;
+	clear: both;
+	position: relative;
+}
+
+h1:before {
+  background: $brand-col-red;
+  content: "";
+  display: block;
+  height: 10px;
+  width: 38%;
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+  opacity: 0.7;
+  filter: alpha(opacity=70); /* For IE8 and earlier */
+}
+
+h1:after {
+  background: $brand-col-green;
+  content: "";
+  display: block;
+  height: 10px;
+  width: 38%;
+  float: right;
+  position: absolute;
+  bottom: -30px;
+  right: 0;
+  opacity: 0.7;
+  filter: alpha(opacity=70); /* For IE8 and earlier */
+}
+
+h1 span:after {
+  background: $brand-col-turquoise;
+  content: "";
+  display: block;
+  height: 10px;
+  width: 38%;
+  float: right;
+  position: absolute;
+  bottom: -30px;
+  left: 31.1%;
+  opacity: 0.7;
+  filter: alpha(opacity=70); /* For IE8 and earlier */
 }
 
 h2 {
-	margin: 0;
+	margin: 0 0 30px;
 	padding: 0;
+	clear: both;
 	font-weight: 600;
 	line-height: 1em;
 	font-size: 150%;
 }
 
 p {
-	margin: 0;
+	margin: 0 0 20px;
 	padding: 0;
 	font-weight: 300;
 }
@@ -192,7 +237,7 @@ header, footer {
 header {
 	position: relative;
 	text-align: center;
-	height: 80px;
+	height: 60px;
 		
 	menu {
 		margin-top: -20px;
@@ -201,14 +246,14 @@ header {
 	ul {
 		margin: 0;
 		padding: 0;
-		height: 80px;
+		height: 60px;
 	}
 	
 	li {
 		display: inline-block;
 		margin-right: 20px;
-		height: 80px;
-		line-height: 80px;
+		height: 60px;
+		line-height: 60px;
 	}
 	
 	li.active a {
@@ -222,14 +267,14 @@ header {
 	.sub-menu-container {
 		position: absolute;
 		left: -40px;
-		top: 80px;
+		top: 60px;
 		width: 400px;
 		height: 400px;
 		overflow: hidden;
 	}
 	
 	.sub-menu-button {
-		height: 80px;
+		height: 60px;
 		
 	}
 	
@@ -258,7 +303,7 @@ header {
 	
 	.social-icons {
 		position: absolute;
-		top: 20px;
+		top: 9px;
 		right: 20px;
 		
 		a {
@@ -269,7 +314,7 @@ header {
 	
 	.header-logo {
 		position: absolute;
-		top: 17px;
+		top: 9px;
 		left: 20px;
 	}
 }
@@ -293,6 +338,7 @@ body {
 	font-weight: 100;
 	background: $brand-col-black;
 	font-size: 160%;
+	color: $brand-col-black;
 }
 
 li {
@@ -304,7 +350,8 @@ li {
 	width: 100%;
 	background: $white;
 	text-align: center;
-	float: left;	
+	float: left;
+	padding: 80px 0;	
 }
 
 .content {
@@ -317,13 +364,67 @@ li {
 	width: 33.333%;
 	float: left;
 	display: inline;
+	position: relative;
+	
+	img {
+		width: 100%;
+		margin-top: 5.5em;
+	}
+	
+	.border-left {
+		background: $brand-col-red;
+		content: "";
+		display: block;
+		height: 30px;
+		width: 38%;
+		position: absolute;
+		bottom: 0;
+		left: 20px;
+		opacity: 0.7;
+		filter: alpha(opacity=70); /* For IE8 and earlier */
+	}
+
+	.border-right {
+		background: $brand-col-green;
+		content: "";
+		display: block;
+		height: 30px;
+		width: 38%;
+		float: right;
+		position: absolute;
+		bottom: 0;
+		right: 20px;
+		opacity: 0.7;
+		filter: alpha(opacity=70); /* For IE8 and earlier */
+	}
+
+	.border-centre {
+		background: $brand-col-turquoise;
+		content: "";
+		display: block;
+		height: 30px;
+		width: 38%;
+		float: right;
+		position: absolute;
+		bottom: 0;
+		left: 31.1%;
+		opacity: 0.7;
+		filter: alpha(opacity=70); /* For IE8 and earlier */
+	}
+
+}
+
+.col-2 {
+	width: 66.666%;
+	float: left;
+	display: inline;
 }
 
 #blog-posts {
 	float: left;
 	width: 100%;
 	background: $brand-col-red;
-	padding: 20px 0 40px 0;
+	padding: 20px 0 15px 0;
 	
 	a {
 		color: $white;
@@ -431,14 +532,14 @@ footer {
 	header {
 		position: relative;
 		text-align: center;
-		height: 80px;
+		height: 60px;
 		
 		.padding {
 			padding: 0;
 		}
 			
 		menu {
-			margin: 80px 0 0;
+			margin: 60px 0 0;
 			padding: 0 0 30px;	
 			position: absolute;
 			background: $brand-col-black;
@@ -523,7 +624,7 @@ footer {
 		
 		.menu-button {
 			float: right;
-			line-height: 80px;
+			line-height: 60px;
 			margin-right: 20px;
 			cursor: pointer;
 			transition: color .3s;
@@ -550,7 +651,7 @@ footer {
 		
 	}
 	
-	.col-3 {
+	.col-3, .col-2 {
 	    width: 100%;
 	}
 	
