--- a/wc-dev/css/main.css
+++ b/wc-dev/css/main.css
@@ -390,7 +390,7 @@ li {
   height: 30px;
   width: 38%;
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
   left: 20px;
   opacity: 0.7;
   filter: alpha(opacity=70);
@@ -405,7 +405,7 @@ li {
   width: 38%;
   float: right;
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
   right: 20px;
   opacity: 0.7;
   filter: alpha(opacity=70);
@@ -420,7 +420,7 @@ li {
   width: 38%;
   float: right;
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
   left: 31.1%;
   opacity: 0.7;
   filter: alpha(opacity=70);
