--- a/wc-dev/css/main.scss
+++ b/wc-dev/css/main.scss
@@ -378,7 +378,7 @@ li {
 		height: 30px;
 		width: 38%;
 		position: absolute;
-		bottom: 0;
+		bottom: -10px;
 		left: 20px;
 		opacity: 0.7;
 		filter: alpha(opacity=70); /* For IE8 and earlier */
@@ -392,7 +392,7 @@ li {
 		width: 38%;
 		float: right;
 		position: absolute;
-		bottom: 0;
+		bottom: -10px;
 		right: 20px;
 		opacity: 0.7;
 		filter: alpha(opacity=70); /* For IE8 and earlier */
@@ -406,7 +406,7 @@ li {
 		width: 38%;
 		float: right;
 		position: absolute;
-		bottom: 0;
+		bottom: -10px;
 		left: 31.1%;
 		opacity: 0.7;
 		filter: alpha(opacity=70); /* For IE8 and earlier */
