--- a/wc-dev/css/main.css
+++ b/wc-dev/css/main.css
@@ -242,33 +242,34 @@ header {
   position: relative;
   text-align: center;
   height: 60px;
+  z-index: 3;
 }
-/* line 242, main.scss */
+/* line 243, main.scss */
 header menu {
   margin-top: -20px;
 }
-/* line 246, main.scss */
+/* line 247, main.scss */
 header ul {
   margin: 0;
   padding: 0;
   height: 60px;
 }
-/* line 252, main.scss */
+/* line 253, main.scss */
 header li {
   display: inline-block;
   margin-right: 20px;
   height: 60px;
   line-height: 60px;
 }
-/* line 259, main.scss */
+/* line 260, main.scss */
 header li.active a {
   color: #d3d930;
 }
-/* line 263, main.scss */
+/* line 264, main.scss */
 header .sub-menu-parent {
   position: relative;
 }
-/* line 267, main.scss */
+/* line 268, main.scss */
 header .sub-menu-container {
   position: absolute;
   left: -40px;
@@ -277,11 +278,11 @@ header .sub-menu-container {
   height: 400px;
   overflow: hidden;
 }
-/* line 276, main.scss */
+/* line 277, main.scss */
 header .sub-menu-button {
   height: 60px;
 }
-/* line 281, main.scss */
+/* line 282, main.scss */
 header .sub-menu {
   background: #460d2d;
   text-align: left;
@@ -293,52 +294,47 @@ header .sub-menu {
   position: absolute;
   top: -200px;
 }
-/* line 292, main.scss */
+/* line 293, main.scss */
 header .sub-menu li {
   display: block;
   margin-right: 40px;
   line-height: 1.9em;
   height: auto;
 }
-/* line 300, main.scss */
+/* line 301, main.scss */
 header .sub-menu-hover {
   top: 0;
 }
-/* line 304, main.scss */
+/* line 305, main.scss */
 header .social-icons {
   position: absolute;
   top: 9px;
   right: 20px;
 }
-/* line 309, main.scss */
+/* line 310, main.scss */
 header .social-icons a {
   margin-right: 10px;
   float: left;
 }
-/* line 315, main.scss */
+/* line 316, main.scss */
 header .header-logo {
   position: absolute;
   top: 9px;
   left: 20px;
 }
 
-/* line 322, main.scss */
+/* line 323, main.scss */
 li {
   color: white;
   list-style-type: none;
 }
 
-/* line 327, main.scss */
+/* line 328, main.scss */
 .padding {
   padding: 20px;
 }
 
-/* line 331, main.scss */
-.column-1 {
-  max-width: 1200px;
-}
-
-/* line 335, main.scss */
+/* line 332, main.scss */
 body {
   font-family: "proxima-nova", sans-serif;
   font-style: normal;
@@ -348,13 +344,13 @@ body {
   color: #460d2d;
 }
 
-/* line 344, main.scss */
+/* line 341, main.scss */
 li {
   color: white;
   list-style-type: none;
 }
 
-/* line 349, main.scss */
+/* line 346, main.scss */
 #main {
   width: 100%;
   background: white;
@@ -363,32 +359,192 @@ li {
   padding: 80px 0;
 }
 
-/* line 357, main.scss */
+/* line 354, main.scss */
 .content {
   max-width: 1200px;
   text-align: left;
   margin: 0 auto;
 }
+/* line 359, main.scss */
+.content ul {
+  margin: 0;
+  padding: 0;
+}
+/* line 364, main.scss */
+.content li {
+  margin: 0 0 0 0;
+  padding: 0;
+}
 
-/* line 363, main.scss */
-.col-3 {
+/* line 370, main.scss */
+#hero-image {
+  background: white;
+  height: 550px;
+  float: left;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+/* line 378, main.scss */
+#hero-image img {
+  height: 95%;
+  position: absolute;
+  bottom: 0;
+  right: 2%;
+}
+/* line 385, main.scss */
+#hero-image .windmill-wrapper {
+  width: 60%;
+  position: absolute;
+  z-index: 2;
+}
+/* line 391, main.scss */
+#hero-image .windmill-logo-container {
+  width: 540px;
+  text-align: center;
+  margin: 0 auto;
+}
+/* line 397, main.scss */
+#hero-image .windmill-sail-container {
+  position: relative;
+}
+/* line 402, main.scss */
+#hero-image .windmill-sail {
+  position: absolute;
+  width: 120.5px;
+  height: 120px;
+  top: 19px;
+  left: 60px;
+  animation-name: spin;
+  animation-duration: 8000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+/* line 414, main.scss */
+#hero-image .windmill-logo {
+  width: 100%;
+  margin-top: 100px;
+  margin-bottom: 40px;
+}
+/* line 426, main.scss */
+#hero-image .col-50 {
+  position: relative;
+}
+/* line 432, main.scss */
+#hero-image h1 {
+  float: none;
+  text-align: center;
+  width: 540px;
+  margin: 0 auto;
+}
+/* line 439, main.scss */
+#hero-image h1:before {
+  display: none;
+  height: 0;
+  width: 0;
+}
+/* line 445, main.scss */
+#hero-image h1:after {
+  display: none;
+  height: 0;
+  width: 0;
+}
+/* line 452, main.scss */
+#hero-image .col-50.left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 200px;
+}
+/* line 459, main.scss */
+#hero-image .col-50.right {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 200px;
+}
+/* line 466, main.scss */
+#hero-image #hero-shape-left {
+  background: #961e63;
+  width: 130%;
+  height: 250px;
+  -webkit-transform: rotate(6deg);
+  -ms-transform: rotate(6deg);
+  transform: rotate(6deg);
+  -webkit-transform-origin: 100% 100%;
+  margin-top: 200px;
+  float: right;
+}
+/* line 479, main.scss */
+#hero-image #hero-shape-right {
+  background: #961e63;
+  width: 130%;
+  height: 250px;
+  -webkit-transform: rotate(-6deg);
+  -ms-transform: rotate(-6deg);
+  transform: rotate(-6deg);
+  -webkit-transform-origin: 0% 100%;
+  margin-top: 200px;
+  float: left;
+}
+
+/* line 493, main.scss */
+#hero-copy {
+  background: #961e63;
+  color: white;
+  min-height: 300px;
+  float: left;
+  width: 100%;
+}
+/* line 500, main.scss */
+#hero-copy p, #hero-copy li {
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+/* line 505, main.scss */
+#hero-copy li:before {
+  content: "";
+  height: 0.9em;
+  width: 0.9em;
+  margin-left: -1.5em;
+  margin-top: 0.4em;
+  line-height: 1.9em;
+  display: block;
+  float: left;
+  background: no-repeat url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16.6 17.2'><style type='text/css'>.st0{fill:#fff;}</style><polygon class='st0' points='0 7.9 6.4 17.2 16.6 0 5.9 12 '/></svg>");
+}
+/* line 517, main.scss */
+#hero-copy .hero-copy-padding-left {
+  padding: 80px 60px;
+  width: 55%;
+  float: right;
+}
+/* line 523, main.scss */
+#hero-copy .hero-copy-padding-right {
+  padding: 80px 60px;
+  width: 55%;
+  float: left;
+}
+
+/* line 530, main.scss */
+.col-33 {
   width: 33.333%;
   float: left;
   display: inline;
   position: relative;
 }
-/* line 369, main.scss */
-.col-3 img {
+/* line 536, main.scss */
+.col-33 img {
   width: 100%;
   margin-top: 5.5em;
 }
-/* line 374, main.scss */
-.col-3 .border-left {
+/* line 541, main.scss */
+.col-33 .border-left {
   background: #961e63;
   content: "";
   display: block;
   height: 30px;
-  width: 38%;
+  width: 33%;
   position: absolute;
   bottom: -10px;
   left: 20px;
@@ -396,13 +552,13 @@ li {
   filter: alpha(opacity=70);
   /* For IE8 and earlier */
 }
-/* line 387, main.scss */
-.col-3 .border-right {
+/* line 554, main.scss */
+.col-33 .border-right {
   background: #d3d930;
   content: "";
   display: block;
   height: 30px;
-  width: 38%;
+  width: 33%;
   float: right;
   position: absolute;
   bottom: -10px;
@@ -411,80 +567,91 @@ li {
   filter: alpha(opacity=70);
   /* For IE8 and earlier */
 }
-/* line 401, main.scss */
-.col-3 .border-centre {
+/* line 568, main.scss */
+.col-33 .border-centre {
   background: #00a79d;
   content: "";
   display: block;
   height: 30px;
-  width: 38%;
+  width: 33%;
   float: right;
   position: absolute;
   bottom: -10px;
-  left: 31.1%;
+  left: 33.4%;
   opacity: 0.7;
   filter: alpha(opacity=70);
   /* For IE8 and earlier */
 }
 
-/* line 417, main.scss */
-.col-2 {
+/* line 584, main.scss */
+.col-50 {
+  width: 50%;
+  float: left;
+  display: inline;
+}
+
+/* line 590, main.scss */
+.col-66 {
   width: 66.666%;
   float: left;
   display: inline;
 }
 
-/* line 423, main.scss */
+/* line 596, main.scss */
 #blog-posts {
   float: left;
   width: 100%;
   background: #961e63;
   padding: 20px 0 15px 0;
 }
-/* line 429, main.scss */
+/* line 602, main.scss */
 #blog-posts a {
   color: white;
 }
-/* line 433, main.scss */
+/* line 606, main.scss */
 #blog-posts a:hover {
   color: #00a79d;
 }
-/* line 437, main.scss */
+/* line 610, main.scss */
 #blog-posts .padding {
   padding: 20px 20px 0;
 }
 
-/* line 443, main.scss */
+/* line 616, main.scss */
 .blog-promo-header {
   margin: 20px 20px 0;
   color: #d3d930;
 }
 
-/* line 450, main.scss */
+/* line 621, main.scss */
+footer {
+  margin: 20px 0;
+}
+/* line 624, main.scss */
 footer .col-3 {
   padding: 20px 0 20px;
 }
-/* line 454, main.scss */
+/* line 628, main.scss */
 footer a {
   color: #00a79d;
 }
-/* line 458, main.scss */
+/* line 632, main.scss */
 footer a:hover {
   color: #c5eae6;
 }
-/* line 464, main.scss */
+/* line 638, main.scss */
 footer .social-icons a {
   margin-right: 15px;
   margin-bottom: 15px;
   float: left;
 }
-/* line 471, main.scss */
+/* line 645, main.scss */
 footer .btt-icon {
   margin-right: 15px;
   margin-bottom: 15px;
   float: left;
 }
-/* line 477, main.scss */
+/* line 651, main.scss */
 footer .back-to-top {
   cursor: pointer;
   transition: color .3s;
@@ -492,11 +659,11 @@ footer .back-to-top {
   color: #00a79d;
   line-height: 1.8em;
 }
-/* line 485, main.scss */
+/* line 659, main.scss */
 footer .back-to-top:hover {
   color: #c5eae6;
 }
-/* line 489, main.scss */
+/* line 663, main.scss */
 footer .icon {
   width: 37px;
   height: 37px;
@@ -505,58 +672,130 @@ footer .icon {
   transition: fill .3s;
   -webkit-transition: fill .3s;
 }
-/* line 498, main.scss */
+/* line 672, main.scss */
 footer .icon:hover {
   fill: #c5eae6;
 }
-/* line 502, main.scss */
+/* line 676, main.scss */
 footer .copyright {
   margin-top: 5.3em;
   font-size: 78%;
 }
 
+@keyframes spin {
+  /* line 685, main.scss */
+  from {
+    transform: rotate(0deg);
+  }
+
+  /* line 688, main.scss */
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 /* =============================
    Media Queries
    ============================= */
+@media only screen and (max-width: 1080px) {
+  /* line 706, main.scss */
+  #hero-image .windmill-logo-container {
+    width: 440px;
+  }
+
+  /* line 710, main.scss */
+  #hero-image h1 {
+    width: 440px;
+  }
+
+  /* line 714, main.scss */
+  #hero-image .windmill-sail {
+    width: 120.5px;
+    height: 120px;
+    top: 19px;
+    left: 37px;
+  }
+}
+@media only screen and (max-width: 980px) {
+  /* line 724, main.scss */
+  #hero-image .windmill-logo-container {
+    width: 340px;
+  }
+
+  /* line 728, main.scss */
+  #hero-image h1 {
+    width: 440px;
+  }
+
+  /* line 732, main.scss */
+  #hero-image img {
+    right: -8%;
+  }
+
+  /* line 736, main.scss */
+  #hero-image .windmill-sail {
+    width: 81.5px;
+    height: 81px;
+    top: 46px;
+  }
+}
+@media only screen and (max-width: 880px) {
+  /* line 745, main.scss */
+  #hero-image .windmill-logo-container {
+    width: 340px;
+  }
+
+  /* line 749, main.scss */
+  #hero-image h1 {
+    width: 440px;
+  }
+
+  /* line 753, main.scss */
+  #hero-image img {
+    height: 80%;
+    right: -14%;
+  }
+}
 /* -----------------------------
    Mobile
    ----------------------------- */
 @media only screen and (max-width: 680px) {
-  /* line 524, main.scss */
+  /* line 765, main.scss */
   .desktop-hide {
     display: block;
   }
 
-  /* line 528, main.scss */
+  /* line 769, main.scss */
   .mobile-hide {
     display: none;
   }
 
-  /* line 532, main.scss */
+  /* line 773, main.scss */
   header {
     position: relative;
     text-align: center;
     height: 60px;
   }
-  /* line 537, main.scss */
+  /* line 778, main.scss */
   header .padding {
     padding: 0;
   }
-  /* line 541, main.scss */
+  /* line 782, main.scss */
   header menu {
     margin: 60px 0 0;
     padding: 0 0 30px;
     position: absolute;
     background: #460d2d;
     width: 100%;
+    z-index: 1;
   }
-  /* line 549, main.scss */
+  /* line 791, main.scss */
   header ul {
     margin: 0;
     padding: 0;
     height: auto;
   }
-  /* line 555, main.scss */
+  /* line 797, main.scss */
   header li {
     display: block;
     margin-right: 0;
@@ -565,19 +804,19 @@ footer .copyright {
     border-bottom: 0px solid;
     padding: 5px 0;
   }
-  /* line 564, main.scss */
+  /* line 806, main.scss */
   header li.active a {
     color: #d3d930;
   }
-  /* line 568, main.scss */
+  /* line 810, main.scss */
   header .sub-menu-parent {
     position: relative;
   }
-  /* line 571, main.scss */
+  /* line 813, main.scss */
   header .sub-menu-parent li {
     background: #681c47;
   }
-  /* line 576, main.scss */
+  /* line 818, main.scss */
   header .sub-menu-container {
     position: relative;
     width: auto;
@@ -586,12 +825,12 @@ footer .copyright {
     left: auto;
     top: auto;
   }
-  /* line 585, main.scss */
+  /* line 827, main.scss */
   header .sub-menu-button {
     height: auto;
     border-bottom: 0px solid #a38686;
   }
-  /* line 590, main.scss */
+  /* line 832, main.scss */
   header .sub-menu {
     background: #460d2d;
     text-align: center;
@@ -602,7 +841,7 @@ footer .copyright {
     top: auto;
     display: none;
   }
-  /* line 600, main.scss */
+  /* line 842, main.scss */
   header .sub-menu li {
     display: block;
     margin: 5px 0;
@@ -610,23 +849,23 @@ footer .copyright {
     height: auto;
     border-bottom: 0;
   }
-  /* line 609, main.scss */
+  /* line 851, main.scss */
   header .sub-menu-hover {
     top: 0;
   }
-  /* line 613, main.scss */
+  /* line 855, main.scss */
   header .sub-menu-clicked {
     display: block;
   }
-  /* line 617, main.scss */
+  /* line 859, main.scss */
   header .sub-menu-button-clicked {
     color: white;
   }
-  /* line 621, main.scss */
+  /* line 863, main.scss */
   header .social-icons {
     display: none;
   }
-  /* line 625, main.scss */
+  /* line 867, main.scss */
   header .menu-button {
     float: right;
     line-height: 60px;
@@ -635,7 +874,7 @@ footer .copyright {
     transition: color .3s;
     -webkit-transition: color .3s;
   }
-  /* line 633, main.scss */
+  /* line 875, main.scss */
   header .menu-button svg {
     fill: white;
     transition: fill .3s;
@@ -644,34 +883,116 @@ footer .copyright {
     margin-left: 10px;
     margin-top: -2px;
   }
-  /* line 643, main.scss */
+  /* line 885, main.scss */
   header .menu-button:hover {
     color: white;
   }
-  /* line 646, main.scss */
+  /* line 888, main.scss */
   header .menu-button:hover svg {
     fill: white;
   }
 
-  /* line 654, main.scss */
-  .col-3, .col-2 {
+  /* line 896, main.scss */
+  .col-33, .col-66, .col-50 {
     width: 100%;
   }
 
-  /* line 658, main.scss */
+  /* line 902, main.scss */
+  .col-33 .border-left {
+    left: 0;
+    width: 38%;
+  }
+  /* line 907, main.scss */
+  .col-33 .border-right {
+    right: 0;
+    width: 38%;
+  }
+  /* line 912, main.scss */
+  .col-33 .border-centre {
+    width: 38%;
+    left: 30.8%;
+  }
+  /* line 917, main.scss */
+  .col-33 img {
+    margin-top: 0;
+  }
+
+  /* line 922, main.scss */
+  #hero-copy .hero-copy-padding-left {
+    padding: 60px 20px 40px;
+    width: auto;
+    float: left;
+  }
+
+  /* line 928, main.scss */
+  #hero-copy .hero-copy-padding-right {
+    padding: 0 20px 60px 55px;
+    width: auto;
+    float: left;
+  }
+
+  /* line 934, main.scss */
+  #hero-image {
+    height: auto;
+  }
+  /* line 937, main.scss */
+  #hero-image .windmill-wrapper {
+    width: 100%;
+    position: relative;
+    z-index: 2;
+    margin-top: 40px;
+  }
+  /* line 944, main.scss */
+  #hero-image .windmill-logo-container {
+    width: 100%;
+  }
+  /* line 948, main.scss */
+  #hero-image h1 {
+    width: 100%;
+    text-align: left;
+  }
+  /* line 953, main.scss */
+  #hero-image img {
+    height: auto;
+    width: 78%;
+    position: relative;
+  }
+  /* line 959, main.scss */
+  #hero-image .windmill-sail {
+    width: 63%;
+    top: 47px;
+    height: -3%;
+    left: -9%;
+  }
+
+  /* line 981, main.scss */
+  #hero-image
+  .mob-img-padding {
+    padding: 20px 0;
+  }
+
+  /* line 985, main.scss */
   #blog-posts {
     padding: 40px 0 60px 0;
   }
-
-  /* line 662, main.scss */
-  footer {
-    margin: 40px 0 40px;
+  /* line 988, main.scss */
+  #blog-posts .blog-promo-header {
+    margin: 20px 20px 0;
   }
-  /* line 665, main.scss */
-  footer .col-3 {
+  /* line 992, main.scss */
+  #blog-posts h2 {
+    margin: 20px 0 0;
+  }
+
+  /* line 997, main.scss */
+  footer {
+    margin: 40px 0;
+  }
+  /* line 1000, main.scss */
+  footer .col-33 {
     padding: 0;
   }
-  /* line 669, main.scss */
+  /* line 1004, main.scss */
   footer .copyright {
     margin-top: 40px;
   }
@@ -682,7 +1003,7 @@ footer .copyright {
 /*
  * Hide visually and from screen readers
  */
-/* line 686, main.scss */
+/* line 1021, main.scss */
 .hidden {
   display: none !important;
 }
@@ -691,7 +1012,7 @@ footer .copyright {
  * Hide only visually, but have it available for screen readers:
  * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
  */
-/* line 695, main.scss */
+/* line 1030, main.scss */
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -708,7 +1029,7 @@ footer .copyright {
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
  */
-/* line 713, main.scss */
+/* line 1048, main.scss */
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
   clip: auto;
@@ -722,7 +1043,7 @@ footer .copyright {
 /*
  * Hide visually and from screen readers, but maintain layout
  */
-/* line 726, main.scss */
+/* line 1061, main.scss */
 .invisible {
   visibility: hidden;
 }
@@ -738,7 +1059,7 @@ footer .copyright {
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
-/* line 743, main.scss */
+/* line 1078, main.scss */
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -747,7 +1068,7 @@ footer .copyright {
   /* 2 */
 }
 
-/* line 748, main.scss */
+/* line 1083, main.scss */
 .clearfix:after {
   clear: both;
 }
@@ -769,7 +1090,7 @@ footer .copyright {
    http://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
 @media print {
-  /* line 780, main.scss */
+  /* line 1115, main.scss */
   *,
   *:before,
   *:after,
@@ -783,18 +1104,18 @@ footer .copyright {
     text-shadow: none !important;
   }
 
-  /* line 789, main.scss */
+  /* line 1124, main.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 793, main.scss */
+  /* line 1128, main.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 797, main.scss */
+  /* line 1132, main.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -803,13 +1124,13 @@ footer .copyright {
    * Don't show links that are fragment identifiers,
    * or use the `javascript:` pseudo protocol
    */
-  /* line 807, main.scss */
+  /* line 1142, main.scss */
   a[href^="#"]:after,
   a[href^="javascript:"]:after {
     content: "";
   }
 
-  /* line 812, main.scss */
+  /* line 1147, main.scss */
   pre,
   blockquote {
     border: 1px solid #999;
@@ -820,23 +1141,23 @@ footer .copyright {
    * Printing Tables:
    * http://css-discuss.incutio.com/wiki/Printing_Tables
    */
-  /* line 822, main.scss */
+  /* line 1157, main.scss */
   thead {
     display: table-header-group;
   }
 
-  /* line 827, main.scss */
+  /* line 1162, main.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 831, main.scss */
+  /* line 1166, main.scss */
   img {
     max-width: 100% !important;
   }
 
-  /* line 837, main.scss */
+  /* line 1172, main.scss */
   p,
   h2,
   h3 {
@@ -844,7 +1165,7 @@ footer .copyright {
     widows: 3;
   }
 
-  /* line 843, main.scss */
+  /* line 1178, main.scss */
   h2,
   h3 {
     page-break-after: avoid;
