--- a/wc-dev/css/main.scss
+++ b/wc-dev/css/main.scss
@@ -511,7 +511,7 @@ li {
 		line-height: 1.9em;
 		display: block;
 		float: left;
-		background: no-repeat url("data:image/svg+xml;base64,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16.6 17.2'><style type='text/css'>.st0{fill:#fff;}</style><polygon class='st0' points='0 7.9 6.4 17.2 16.6 0 5.9 12 '/></svg>");
+		background: no-repeat url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16.6 17.2'><style type='text/css'>.st0{fill:#fff;}</style><polygon class='st0' points='0 7.9 6.4 17.2 16.6 0 5.9 12 '/></svg>");
 	}
 	
 	.hero-copy-padding-left {
