--- a/wc-dev/css/main.scss
+++ b/wc-dev/css/main.scss
@@ -511,7 +511,7 @@ li {
 		line-height: 1.9em;
 		display: block;
 		float: left;
-		background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16.6 17.2'%3E%3Cstyle type='text/css'%3E.st0{fill:white;}%3C/style%3E%3Cpolygon class='st0' points='0 7.9 6.4 17.2 16.6 0 5.9 12 '/%3E%3C/svg%3E") no-repeat;
+		background: url("data%3Aimage%2Fsvg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2016.6%2017.2%22%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E.st0{fill%3Awhite;}%3C%2Fstyle%3E%3Cpolygon%20class%3D%22st0%22%20points%3D%220%207.9%206.4%2017.2%2016.6%200%205.9%2012%20%22%2F%3E%3C%2Fsvg%3E") no-repeat;
 	}
 	
 	.hero-copy-padding-left {
